--- a/progress-account-spec.yml
+++ b/progress-account-spec.yml
@@ -2,6 +2,8 @@ openapi: 3.0.1
 info:
   title: Progress-Account
   description: Process account specification to define the progress account API
+  contact:
+    email: scubatoy@gmail.com  
   version: 1.0
 servers:
   - url: http://localhost:8080/v1
