--- a/user-account-spec.yml
+++ b/user-account-spec.yml
@@ -2,6 +2,8 @@ openapi: 3.0.1
 info:
   title: User-Account
   description: User account specification to define the user account API
+  contact:
+    email: scubatoy@gmail.com
   version: 1.0
 servers:
   - url: http://localhost:8080/v1
